--- a/scss/popup.scss
+++ b/scss/popup.scss
@@ -1,39 +1,27 @@
 /* Popup Style */
-#popup {
-	background-color: #c3534b;
-	color: #FFFFFF;
-	position: fixed;
-	max-width: 250px;
-	padding: 10px;
-	margin: 10px;
-	bottom: 0;
-	right: 0;
-	display: none;
-	border-radius: 5px;
-	z-index: 6;
-	font-family: sans-serif;
-}
-
-.close {
-	cursor: pointer;
-	background: 0 0;
-	border: 0;
-	float: right;
-	font-size: 21px;
-	font-weight: 700;
-	line-height: 1;
-	color: #000;
-	text-shadow: 0 1px 0 #fff;
-	opacity: .2;
-	position: absolute;
-	right: 9px;
-	top: 7px;
-}
-
-.close:hover {
-	opacity: .5;
-}
-
-#popupText {
-	margin-right: 23px;
+.modal{
+	top: 35%;
+	border-radius: 12px;
+	z-index: 10;
+	.modal-content{
+		padding: 12px;
+		font-size: 14px;
+	}
+	.modal-footer{
+		padding: 0 12px 12px;
+		height: auto;
+		label{
+			float: left !important;
+			span{
+				padding-left: 30px;
+			}
+		}
+		button{
+			background-color: $main-color;
+			height: 30px;
+			line-height: 30px;
+			border-radius: 6px;
+			margin:0 !important;
+		}
+	}
 }
