--- a/scss/header.scss
+++ b/scss/header.scss
@@ -83,6 +83,10 @@ header {
                 .main_title_container {
                     background: $main-color;
                     transform: perspective(15em) rotateX(-30deg);
+                    -ms-transform: perspective(15em) rotateX(-30deg);
+                    -webkit-transform: perspective(15em) rotateX(-30deg);
+                    -moz-transform: perspective(15em) rotateX(-30deg);
+                    -o-transform: perspective(15em) rotateX(-30deg);
                     border-radius: 0 0 4px 4px;
                     box-shadow: 0 4px 6px #00000029;
                     position: relative;
