--- a/scss/header.scss
+++ b/scss/header.scss
@@ -99,6 +99,10 @@ header {
                     width: 80%;
                     left: 50%;
                     transform: translateX(-50%);
+                    -ms-transform: translateX(-50%);
+                    -webkit-transform: translateX(-50%);
+                    -moz-transform: translateX(-50%);
+                    -o-transform: translateX(-50%);
                     @media  screen and (max-width: 350px) {
                         top: 8px;
                     }
