--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,7 @@ header .bottom_header .page_title .main_title {
   }
 }
 header .bottom_header .page_title .main_title .main_title_container {
-  background: #00A5B3;
+  background: #b30059;  /* #00A5B3; */
   transform: perspective(15em) rotateX(-30deg);
   -ms-transform: perspective(15em) rotateX(-30deg);
   -webkit-transform: perspective(15em) rotateX(-30deg);
