--- a/css/style.css
+++ b/css/style.css
@@ -298,13 +298,13 @@ header .bottom_header .page_title .main_title .main_title_container {
   position: relative;
   bottom: 3px;
   height: 33px;
-  border:1px solid blue;
 }
 header .bottom_header .page_title .main_title .main_title_image {
   position: absolute;
   top: 2px;
   width: 80%;
   left: 50%;
+  z-index: 0;
   border:1px solid red;
   transform: translateX(-50%);
   -ms-transform: translateX(-50%);
@@ -321,7 +321,6 @@ header .bottom_header .page_title .main_title .main_title_image img {
   max-width: 134px;
   display: block;
   margin: 0 auto;
-  border: 1px solid pink;
 }
 @media screen and (max-width: 350px) {
   header .bottom_header .page_title .main_title .main_title_image img {
