--- a/scss/container.scss
+++ b/scss/container.scss
@@ -180,7 +180,8 @@
                        background: #dcdcdc;
                     } */
                     &.totals .th{
-                        font-size: 10px;
+                        font-size: 11px;
+                        font-weight: 700;
                     }
                     &.bottom_head {
                         .th:nth-child(3){
@@ -201,6 +202,8 @@
                     .th {
                         line-height: 25px;
                         padding: 0 2px;
+                        font-weight: 600;
+                        font-size: 11px;
                         &:nth-child(1),
                         &:nth-child(2){
                             text-align: left;
