--- a/scss/header.scss
+++ b/scss/header.scss
@@ -98,11 +98,14 @@ header {
                     top: 5px;
                     width: 80%;
                     left: 50%;
-                    transform: translateX(-50%);
+                    transform: translateX(-50%);`
                     -ms-transform: translateX(-50%);
                     -webkit-transform: translateX(-50%);
                     -moz-transform: translateX(-50%);
                     -o-transform: translateX(-50%);
+                    border:1px solid red;
+                    display: block;
+                    height: 28px;
                     @media  screen and (max-width: 350px) {
                         top: 8px;
                     }
