--- a/views/templates/header.html
+++ b/views/templates/header.html
@@ -34,7 +34,7 @@
             <div class="main_title">
                 <div class="main_title_container"></div>
                 <div class="main_title_image">
-                    <img src="img/autoItalia.png" alt="AutoItalia Logo">
+                    <!-- <img src="img/autoItalia.png" alt="AutoItalia Logo"> -->
                 </div>
             </div>
             <div class="date">
