--- a/scss/header.scss
+++ b/scss/header.scss
@@ -98,7 +98,7 @@ header {
                     top: 5px;
                     width: 80%;
                     left: 50%;
-                    transform: translateX(-50%);`
+                    transform: translateX(-50%);
                     -ms-transform: translateX(-50%);
                     -webkit-transform: translateX(-50%);
                     -moz-transform: translateX(-50%);
