--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ header .bottom_header .page_title .main_title .main_title_container {
 }
 header .bottom_header .page_title .main_title .main_title_image {
   position: absolute;
-  top: 5px;
+  top: 0;
   width: 80%;
   left: 50%;
   transform: translateX(-50%);
