--- a/scss/header.scss
+++ b/scss/header.scss
@@ -95,7 +95,7 @@ header {
                 }
                 .main_title_image {
                     position: absolute;
-                    top: 5px;
+                    top:0;
                     width: 80%;
                     left: 50%;
                     transform: translateX(-50%);
