--- a/scss/header.scss
+++ b/scss/header.scss
@@ -77,6 +77,7 @@ header {
                 width: 50%;
                 position: relative;
                 padding: 0 12px;
+                border:1px solid blue;
                 @media  screen and (min-width: $medium) {
                     padding: 0 14px;
                 }
@@ -92,6 +93,7 @@ header {
                     position: relative;
                     bottom: 3px;
                     height: 33px;
+                    border:1px solid purple;
                 }
                 .main_title_image {
                     position: absolute;
