--- a/scss/header.scss
+++ b/scss/header.scss
@@ -78,6 +78,19 @@ header {
                 position: relative;
                 padding: 0 12px;
                 border:1px solid blue;
+                &:after{
+                    content:"";
+                    position: absolute;
+                    top: 0;
+                    left:0;
+                    right:0;
+                    z-index:10;
+                    width: 134px;
+                    height: 23px;
+                    margin:0 auto;
+                    background: transparent;
+                    border: 1px solid pink;
+                }
                 @media  screen and (min-width: $medium) {
                     padding: 0 14px;
                 }
