--- a/scss/header.scss
+++ b/scss/header.scss
@@ -53,7 +53,7 @@ header {
         //height: 84px;
         .filters_container {
             background: $main-color;
-            box-shadow: 0 3px 6px #00000029;
+            /* box-shadow: 0 3px 6px #00000029; */
 
             .top_filters {
                 padding: 4px 4px 8px;
