--- a/scss/header.scss
+++ b/scss/header.scss
@@ -53,7 +53,7 @@ header {
         //height: 84px;
         .filters_container {
             background: $main-color;
-            /* box-shadow: 0 3px 6px #00000029; */
+            box-shadow: 0 3px 6px #00000029;
 
             .top_filters {
                 padding: 4px 4px 8px;
@@ -72,6 +72,18 @@ header {
 
         .page_title {
             display: flex;
+            position: relative;
+            &:after{
+                content:"";
+                position: absolute;
+                top: 0;
+                left:10px;
+                z-index:1000;
+                width: 134px;
+                height: 23px;
+                background: transparent;
+                border: 1px solid lime;
+            }
 
             .main_title {
                 width: 50%;
