main_title_container change

--- a/views/templates/header.html
+++ b/views/templates/header.html
@@ -33,14 +33,14 @@
         <div class="page_title">
             <div class="main_title">
                 <!-- <div class="main_title_container"></div> -->
-                <!-- <div class="main_title_image"> -->
-                    <!-- <img src="img/autoItalia.png" alt="AutoItalia Logo"> -->
-                <!-- </div> -->
+                <div class="main_title_image">
+                    <img src="img/autoItalia.png" alt="AutoItalia Logo">
+                </div>
             </div>
-            <!-- <div class="date">
+            <div class="date">
                 <div class="label">Date: </div>
                 <div class="qvobject datetime" id="datetime"></div>
-            </div> -->
+            </div>
         </div>
     </div>
 </div>
