--- a/css/style.css
+++ b/css/style.css
@@ -275,18 +275,6 @@ header .bottom_header .filters_container .top_filters .fiter_div .label {
 }
 header .bottom_header .page_title {
   display: flex;
-  position: relative;
-}
-header .bottom_header .page_title:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 10px;
-  z-index: 1000;
-  width: 134px;
-  height: 23px;
-  background: transparent;
-  border: 1px solid lime;
 }
 header .bottom_header .page_title .main_title {
   width: 50%;
@@ -300,7 +288,7 @@ header .bottom_header .page_title .main_title:after {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 10;
+  z-index: 100;
   width: 134px;
   height: 23px;
   margin: 0 auto;
@@ -314,17 +302,16 @@ header .bottom_header .page_title .main_title:after {
 }
 header .bottom_header .page_title .main_title .main_title_container {
   background: #00A5B3;
-  transform: perspective(15em) rotateX(-30deg);
-  -ms-transform: perspective(15em) rotateX(-30deg);
-  -webkit-transform: perspective(15em) rotateX(-30deg);
-  -moz-transform: perspective(15em) rotateX(-30deg);
-  -o-transform: perspective(15em) rotateX(-30deg);
+  /*  transform: perspective(15em) rotateX(-30deg);
+   -ms-transform: perspective(15em) rotateX(-30deg);
+   -webkit-transform: perspective(15em) rotateX(-30deg);
+   -moz-transform: perspective(15em) rotateX(-30deg);
+   -o-transform: perspective(15em) rotateX(-30deg); */
   border-radius: 0 0 4px 4px;
   box-shadow: 0 4px 6px #00000029;
   position: relative;
   bottom: 3px;
   height: 33px;
-  border: 1px solid purple;
 }
 header .bottom_header .page_title .main_title .main_title_image {
   position: absolute;
@@ -336,7 +323,6 @@ header .bottom_header .page_title .main_title .main_title_image {
   -webkit-transform: translateX(-50%);
   -moz-transform: translateX(-50%);
   -o-transform: translateX(-50%);
-  border: 1px solid red;
   display: block;
   height: 28px;
 }
