--- a/views/templates/header.html
+++ b/views/templates/header.html
@@ -32,7 +32,7 @@
         </div>
         <div class="page_title">
             <div class="main_title">
-                <!-- <div class="main_title_container"></div> -->
+                <div class="main_title_container"></div>
                 <div class="main_title_image">
                     <img src="img/autoItalia.png" alt="AutoItalia Logo">
                 </div>
