--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,6 @@ header .bottom_header .page_title .main_title {
   width: 50%;
   position: relative;
   padding: 0 12px;
-  border: 1px solid blue;
 }
 header .bottom_header .page_title .main_title:after {
   content: "";
@@ -293,7 +292,6 @@ header .bottom_header .page_title .main_title:after {
   height: 23px;
   margin: 0 auto;
   background: transparent;
-  border: 1px solid pink;
 }
 @media screen and (min-width: 992px) {
   header .bottom_header .page_title .main_title {
@@ -302,15 +300,15 @@ header .bottom_header .page_title .main_title:after {
 }
 header .bottom_header .page_title .main_title .main_title_container {
   background: #00A5B3;
-  /*  transform: perspective(15em) rotateX(-30deg);
-   -ms-transform: perspective(15em) rotateX(-30deg);
-   -webkit-transform: perspective(15em) rotateX(-30deg);
-   -moz-transform: perspective(15em) rotateX(-30deg);
-   -o-transform: perspective(15em) rotateX(-30deg); */
-  border-radius: 0 0 4px 4px;
-  box-shadow: 0 4px 6px #00000029;
+  transform: perspective(150px) rotateX(150deg);
+  -webkit-transform: perspective(150px) rotateX(150deg);
+  /*  transform: perspective(150px) rotateX(-30deg);
+   -webkit-transform: perspective(150px) rotateX(-30deg); */
+  /* border-radius: 0 0 4px 4px; */
+  /* box-shadow: 0 4px 6px #00000029; */
   position: relative;
-  bottom: 3px;
+  bottom: 5px;
+  /* 3px */
   height: 33px;
 }
 header .bottom_header .page_title .main_title .main_title_image {
