--- a/scss/header.scss
+++ b/scss/header.scss
@@ -77,7 +77,7 @@ header {
                 width: 50%;
                 position: relative;
                 padding: 0 12px;
-                border:1px solid blue;
+                //border:1px solid blue;
                 &:after{
                     content:"";
                     position: absolute;
@@ -89,22 +89,21 @@ header {
                     height: 23px;
                     margin:0 auto;
                     background: transparent;
-                    border: 1px solid pink;
+                   // border: 1px solid pink;
                 }
                 @media  screen and (min-width: $medium) {
                     padding: 0 14px;
                 }
                 .main_title_container {
                     background: $main-color;
-                   /*  transform: perspective(15em) rotateX(-30deg);
-                    -ms-transform: perspective(15em) rotateX(-30deg);
-                    -webkit-transform: perspective(15em) rotateX(-30deg);
-                    -moz-transform: perspective(15em) rotateX(-30deg);
-                    -o-transform: perspective(15em) rotateX(-30deg); */
-                    border-radius: 0 0 4px 4px;
-                    box-shadow: 0 4px 6px #00000029;
+                    transform: perspective(150px) rotateX(150deg);
+                    -webkit-transform: perspective(150px) rotateX(150deg);
+                   /*  transform: perspective(150px) rotateX(-30deg);
+                    -webkit-transform: perspective(150px) rotateX(-30deg); */
+                    /* border-radius: 0 0 4px 4px; */
+                    /* box-shadow: 0 4px 6px #00000029; */
                     position: relative;
-                    bottom: 3px;
+                    bottom: 5px; /* 3px */
                     height: 33px;
                 }
                 .main_title_image {
